--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,31 @@
 alembic==1.2.1
 astroid==2.3.1
+certifi==2019.9.11
 Click==7.0
 colorama==0.4.1
+cycler==0.10.0
 Flask==1.1.1
 Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.1
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.1
+kiwisolver==1.1.0
 lazy-object-proxy==1.4.2
 Mako==1.1.0
 MarkupSafe==1.1.1
+matplotlib==3.1.1
 mccabe==0.6.1
+numpy==1.17.2
 pylint==2.4.2
+pyparsing==2.4.2
 python-dateutil==2.8.0
 python-dotenv==0.10.3
 python-editor==1.0.4
 six==1.12.0
 SQLAlchemy==1.3.8
 typed-ast==1.4.0
+w1thermsensor==1.1.2
 Werkzeug==0.16.0
+wincertstore==0.2
 wrapt==1.11.2
