--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ MarkupSafe==1.1.1
 matplotlib==3.1.1
 mccabe==0.6.1
 numpy==1.17.2
+pycodestyle==2.5.0
 pylint==2.4.2
 pyparsing==2.4.2
 python-dateutil==2.8.0
